src/objects/Contract_Checklist__c.object
<CustomObject>
    <fields>
        <fullName>Rate_Sheet_Date_Ranges_Verified__c</fullName>
        <description>Acknowledgment by contract creator that rate sheet dates are correct</description>
        <inlineHelpText>Ensure that you have provided consecutive dates on the Rate Sheet. When Yes is selected, the Loading team will load rooms according to the dates provided. Any missing dates will be treated as close out dates. Any overlapping dates will raise a query</inlineHelpText>
        <label>Rate Sheet Date Ranges Verified</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rates_Effective_Now__c</fullName>
        <description>Field from PSG</description>
        <label>Rates Effective Now</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rates_and_Inventory_Already_Loaded__c</fullName>
        <label>Rates and Inventory Already Loaded?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rejected_Date__c</fullName>
        <label>Rejected Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rejected_Return_to_Loading_Date__c</fullName>
        <label>Rejected Return to Loading Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Remove_All_Existing_Rate_Plans_Rooms__c</fullName>
        <inlineHelpText>Selecting &apos;Yes&apos; will mean that all existing room types / rate plans will be deactivated. Ensure you provide all required information to allow for new room types and rate plans to be loaded.</inlineHelpText>
        <label>Remove All Existing Rate Plans/Rooms?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Remove_From_Package_Path__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remove From Package Path?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requested_ID_s_Date__c</fullName>
        <label>Requested ID&apos;s Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SA_Margin__c</fullName>
        <inlineHelpText>Select your margin percentage rate (10 - 75).</inlineHelpText>
        <label>SA Margin % (GSA)</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>33</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>37</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>38</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>39</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SA_Min_Margin_Amount__c</fullName>
        <inlineHelpText>Select a dollar amount. If your hotel has no dollar amount, enter in 0.00.</inlineHelpText>
        <label>SA Min $ Margin Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Set_up_EVC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates to if hotel is to be set up with EVC.</description>
        <inlineHelpText>Check this box if you want the hotel to be set up with EVC (Expedia Virtual Card).</inlineHelpText>
        <label>Set up EVC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Set_up_Expedia_Pay__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates if a property is to be set up on Expedia pay</description>
        <inlineHelpText>Check this box if you want the hotel to be set up with an Expedia Pay account.</inlineHelpText>
        <label>Set up Expedia Pay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Cancellation_Policies__c</fullName>
        <inlineHelpText>Yes indicates you have non standard cancellation policies. Ensure these are clearly stated on the rate sheet and add information in the details and instructions field below.</inlineHelpText>
        <label>Special Cancellation Policies?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Approval Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Load - Rate Sheet Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Load - Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Returned to MM/MC-See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Returned to Loading Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected - Returned to Loading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested ID&apos;s(Vendor or Expedia ID)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loading Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Ready for QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Loading Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Inventory Load - Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Load Additional Inventory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sum_Returned_to_Loading__c</fullName>
        <description>For the purposes of SLA calculation on MM Query Response Time</description>
        <label>Sum Returned to Loading</label>
        <summarizedField>Contract_Loading_Step__c.Open_Time__c</summarizedField>
        <summaryFilterItems>
            <field>Contract_Loading_Step__c.Contract_Loading_Step__c</field>
            <operation>equals</operation>
            <value>Contract Returned to Loading Team</value>
        </summaryFilterItems>
        <summaryForeignKey>Contract_Loading_Step__c.Contract_Checklist__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tax_ID_USA_properties_only__c</fullName>
        <label>Tax ID(USA properties only)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Load_Time__c</fullName>
        <formula>TEXT( 
ROUND( 
(Contract_Complete_Date__c - Contract_Start_Loading_Date__c) - 
MOD(Contract_Complete_Date__c - Contract_Start_Loading_Date__c,1) 
,0) 
) 
&amp;&quot; day(s), &quot;&amp; 
TEXT( 
ROUND( 
MOD(Contract_Complete_Date__c - Contract_Start_Loading_Date__c,1)*24 - 
MOD(MOD(Contract_Complete_Date__c - Contract_Start_Loading_Date__c,1)*24,1) 
,0) 
) 
&amp;&quot; hour(s), &quot;&amp; 
TEXT( 
ROUND( 
MOD(MOD(Contract_Complete_Date__c - Contract_Start_Loading_Date__c,1)*24,1) 
*60 
,0) 
)&amp;&quot; minute(s)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Load Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_MM_Time__c</fullName>
        <formula>TEXT( 
ROUND( 
(Date_Returned_to_Loading_Team_From_MM_MC__c - Date_Returned_to_MM_MC__c) - 
MOD(Date_Returned_to_Loading_Team_From_MM_MC__c - Date_Returned_to_MM_MC__c,1) 
,0) 
) 
&amp;&quot; day(s), &quot;&amp; 
TEXT( 
ROUND( 
MOD(Date_Returned_to_Loading_Team_From_MM_MC__c - Date_Returned_to_MM_MC__c,1)*24 - 
MOD(MOD(Date_Returned_to_Loading_Team_From_MM_MC__c - Date_Returned_to_MM_MC__c,1)*24,1) 
,0) 
) 
&amp;&quot; hour(s), &quot;&amp; 
TEXT( 
ROUND( 
MOD(MOD(Date_Returned_to_Loading_Team_From_MM_MC__c - Date_Returned_to_MM_MC__c,1)*24,1) 
*60 
,0) 
)&amp;&quot; minute(s)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total MM Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Back_to_PSG__c</fullName>
        <formula>IF(OR(ISPICKVAL(Status__c, &quot;Sent for Approval &amp; Signatures&quot;),
ISPICKVAL(Status__c, &quot;Ready to Load - Rate Sheet Only&quot;),
ISPICKVAL(Status__c, &quot;Ready to Load - Contract&quot;),
ISPICKVAL(Status__c, &quot;New&quot;)),  
&quot;No&quot;,&quot;Yes&quot;)</formula>
        <label>Update Back to PSG</label>
        <type>Text</type>
    </fields>
    <label>Contract Checklist</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Checklist_Type__c</columns>
        <columns>Status__c</columns>
        <columns>External_Contract_Id__c</columns>
        <columns>External_Contract_Number__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>PSG_Checklist_Created_Date__c</columns>
        <columns>PSG_Checklist_Last_Modified_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Open_DS_Contracts</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>PSG_Checklist_Created_Date__c</columns>
        <columns>PSG_Checklist_Last_Modified_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract_Checklist__c.Destination_Services</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Ready to Load - Rate Sheet Only</value>
        </filters>
        <label>Open DS Contracts</label>
    </listViews>
    <listViews>
        <fullName>Open_Hotel_Contracts</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>External_Contract_Number__c</columns>
        <columns>External_Contract_Id__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>PSG_Checklist_Created_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract_Checklist__c.Hotel</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Contract Loading Complete,Closed,Additional Inventory Load - Complete</value>
        </filters>
        <label>Open Hotel Contracts</label>
    </listViews>
    <listViews>
        <fullName>Ready_To_Load_Additional_Rates</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>External_Contract_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract_Checklist__c.Hotel</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Ready to Load Additional Inventory</value>
        </filters>
        <label>Ready To Load Additional Rates</label>
    </listViews>
    <listViews>
        <fullName>Requested_Ids_Hotel_Contracts</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>External_Contract_Number__c</columns>
        <columns>External_Contract_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>PSG_Checklist_Created_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract_Checklist__c.Hotel</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Requested ID&apos;s(Vendor or Expedia ID)</value>
        </filters>
        <label>Requested Ids Hotel Contracts</label>
    </listViews>
    <nameField>
        <displayFormat>CC-{00000000}</displayFormat>
        <label>Contract Checklist Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Checklists</pluralLabel>
    <recordTypes>
        <fullName>Destination_Services</fullName>
        <active>true</active>
        <description>Checklist for Destination Services</description>
        <label>Destination Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hotel</fullName>
        <active>true</active>
        <description>Checklist for a hotel</description>
        <label>Hotel</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Contract_Loading_Complete</fullName>
        <active>true</active>
        <description>Once a contract status has been set to Contact Loading Complete, it cannot be changed.</description>
        <errorConditionFormula>AND(ISCHANGED( Status__c ), ISPICKVAL(PRIORVALUE( Status__c ), &quot;Contract Loading Complete&quot;), NOT(ISPICKVAL (Status__c, &quot;Contract Loading Complete&quot;)))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Status for completed contracts cannot be changed. Please send your request to hotelinfo@hotels.com for any changes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cut_off_policy</fullName>
        <active>true</active>
        <description>The cut off policy reason field must be populated if the cut off policy is not 0</description>
        <errorConditionFormula>AND( 
NOT( 
OR( 
ISPICKVAL(Cut_Off_Policy__c, &quot;0&quot;), 
ISBLANK(TEXT(Cut_Off_Policy__c)) 
)), 
ISBLANK( Cut_Off_Policy_Reason__c ) 
)</errorConditionFormula>
        <errorDisplayField>Cut_Off_Policy_Reason__c</errorDisplayField>
        <errorMessage>Please provide a reason if Cut-Off Policy is not 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Property_Submitted_By_for_LATAM_Region</fullName>
        <active>false</active>
        <description>Require the Property Submitted By Contact field for properties in the LATAM Markets Region.</description>
        <errorConditionFormula>AND( 
ISNEW(), 
OR( Account__r.Region__r.Name = &quot;Mexico &amp; Central America&quot;, 
 Account__r.Region__r.Name =&quot;South America&quot;), 
ISBLANK( Property_Submitted_By_Contact__c ), 
OR( 
ISPICKVAL(Checklist_Type__c , &quot;Independent - New&quot;), 
ISPICKVAL(Checklist_Type__c , &quot;Specialty Lodging - New&quot;) 
) 
)</errorConditionFormula>
        <errorDisplayField>Property_Submitted_By_Contact__c</errorDisplayField>
        <errorMessage>New contracts for LATAM Properties require a Property Submitted By Contact</errorMessage>
    </validationRules>
</CustomObject>